# wind-toolkit

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
docs/: map-usage.md  usage.md
src/atmos_toolkit/: utils.py
src/wind_toolkit/: __init__.py  cleanup.py  config.py  data_acquisition.py  main.py  map_visualizer.py  processor.py  tile_generator.py  utils.py  wind_data_generator.py
tools/: setup_map_data.py
