[project]
name = "atmos-toolkit"
version = "0.3.0"
description = "GFS multi-variable meteorological data acquisition and map visualization toolkit."
authors = [{ name = "Lanseria", email = "zhangchao564265135@hotmail.com" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "cartopy>=0.24.0",
    "cfgrib>=0.9.15",
    "matplotlib>=3.10.5",
    "netcdf4>=1.7.2",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "pillow>=11.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.0",
    "scipy>=1.15.0",
    "xarray>=2025.7.1",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atmos_toolkit"]
